2009-05-28  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/tidy/tidy-blur-group.c: Added simple dithering to blurred image,
	  to try and reduce banding effect. Also revert to RGB565 textures now
	  we are 16 bit as these take up less memory, are faster, and due to 
	  some SGX magic actually look better too.

2009-05-28  Gordon Williams <gordon.williams@collabora.co.uk>

	* tests/Makefile.am
	* tests/test-speed.c (added): Added very simple gtk test app that
	  renders as fast as it can to the screen.

2009-05-28  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/mb/hd-theme.c: Now set up TidyStyle to the colours set in the
	  current theme. This makes sure that the scrollbars in Launcher/Task
	  Navigator are the correct colour.

2009-05-28  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#119129 - Memory leaks in hd-clutter-cache
	* src/util/hd-gtk-style.c: Added check for potential segfault if 
	  function is called too early.
	* src/home/hd-clutter-cache.c
	* src/home/hd-title-bar.c: Added call to parent class's dispose 
	  method.

2009-05-27  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#115387 - No initial scrollbar shown in applications menu

	* src/tidy/tidy-finger-scroll.h
	* src/tidy/tidy-finger-scroll.c: added the function
	tidy_finger_scroll_show_scrollbars, which shows scrollbars for a
	second and then fades them away again.
	* src/launcher/hd-launcher-page.c: call the new function
	tidy_finger_scroll_show_scrollbars when the page is shown

2009-05-27  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#115310 after reading the mail also in task switcher the notification
		  symptoms are showing still

	As a side effect gtk_window_present() will smoothly zoom in
	if called in the switcher view.

	* src/home/hd-task-navigator.c (appthumb_clicked, appthumb_close_clicked):
	  If a thumbnail has a notification behave like one: clear it
	  when the thumbnail is clicked or close it when the thumbnail